test/files/parser/errors/call-input-format.organic
// Call with improper input format
// 4 ~ 12 ~ Expected ":", received ")".

sine(volume)
